Revert "Wire combined request tariff details API into collection flow"
This reverts commit c806fb02fbaca4d9f8ec8d2bbf734804f610d745.
